<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.footballfever.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/home_team" />

            <TextView
                android:id="@+id/home_team_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/home_team_score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addSixPointsForHome"
                android:text="@string/touchdown" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOnePointForHome"
                android:text="@string/extra_point" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addTwoPointsForHome"
                android:text="@string/two_pt_conversion" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addThreePointsForHome"
                android:text="@string/field_goal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/away_team" />

            <TextView
                android:id="@+id/away_team_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/away_team_score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addSixPointsForAway"
                android:text="@string/touchdown" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOnePointForAway"
                android:text="@string/extra_point" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addTwoPointsForAway"
                android:text="@string/two_pt_conversion" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addThreePointsForAway"
                android:text="@string/field_goal" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScoresToZero"
        android:text="@string/reset" />
</RelativeLayout>
